<resources>
    <string name="app_name" translatable="false">Test</string>
    <string name="your_text" translatable="false">your text</string>
    <string name="change_1" translatable="false">change 1</string>
    <string name="change_2" translatable="false">change 2</string>
    <string name="next1">Next1</string>

    <string name="pragrape" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device launched in September 2008.</string>
    <string name="enter_name" translatable="false">Enter name</string>
    <string name="second_activity">Second Activity</string>
    <string name="next">Next</string>


    <string name="implicit_intent" translatable="false">Implicit Intent</string>
    <string name="open_web" translatable="false">Open Web</string>
    <string name="open_call" translatable="false">Open Call</string>
    <string name="open_map" translatable="false">Open Map</string>
    <string name="title_activity_main6">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>